# snack

./: Cargo.toml  README.md
resources/: snack.toml
src/: config.rs  lib.rs  main.rs  slack.rs  utils.rs
