[package]
name = "snack"
description = "Snack is a simple Slack command handler for routing commands to other services."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
bytes = "*"
clap = "3.0.0-beta.2"
chrono = "0.4.13"
env_logger = "0.7.1"
futures-util = "0.3.5"
hex = "0.4.2"
hmac = "0.8.1"
hyper = "0.13.6"
hyper-tls = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.8"
prost = "0.6"
percent-encoding = "2.1.0"
toml = "0.5"
tonic = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9.1"
sha2 = "0.9.1"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"